--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
         <p>konnichiwa. I can learn Japanese better thanks to Tanaka-san.</p>
       </div>
       <div>
-        <button>Twitter</button>
-        <button>Discord</button>
-        <button>Youtube</button>
-        <button>Facebook</button>
-        <button>Instagram</button>
+        <a href="https://twitter.com" target="_blank">
+          <span> Twitter </span>
+        </a>
+        <a href="https://dicord.com" target="_blank"><span> Discord </span></a>
+        <a href="https://youtube.com" target="_blank"><span> Youtube </span></a>
+        <a href="https://facebook.com" target="_blank"><span>Facebook</span></a>
+        <a href="https://instagram.com" target="_blank"
+          ><span> Instagram </span></a
+        >
       </div>
     </section>
     <footer>Make by cemy from ❤️.</footer>
