--- a/index.html
+++ b/index.html
@@ -26,12 +26,18 @@
         <a href="https://twitter.com" target="_blank">
           <span> Twitter </span>
         </a>
-        <a href="https://dicord.com" target="_blank"><span> Discord </span></a>
-        <a href="https://youtube.com" target="_blank"><span> Youtube </span></a>
-        <a href="https://facebook.com" target="_blank"><span>Facebook</span></a>
+        <a href="https://dicord.com" target="_blank">
+          <span> Discord </span>
+        </a>
+        <a href="https://youtube.com" target="_blank">
+          <span> Youtube </span>
+        </a>
+        <a href="https://facebook.com" target="_blank">
+          <span>Facebook</span>
+        </a>
         <a href="https://instagram.com" target="_blank"
-          ><span> Instagram </span></a
-        >
+          ><span> Instagram </span>
+        </a>
       </div>
     </section>
     <footer>Make by cemy from ❤️.</footer>
